--- a/AR-Armada/Index.html
+++ b/AR-Armada/Index.html
@@ -22,7 +22,7 @@
 
 <body style="margin: 0; overflow: hidden;">
   
-  <a-scene embedded="" arjs="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui=""
+  <a-scene embedded="" arjs="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="">
 
     <!-- Marker para letterA.patt redirije a web-->
@@ -31,23 +31,23 @@
     </a-marker>
 
     <!-- Marker para letterB.patt -->
-    <a-marker preset="custom" type="pattern" url="./data/letterB.patt" id="markerVideo_DB">
-      <a-video src="#video_DB" position="1 1 -3" rotation="0 0 0" width="4" height="2.25" id="video1">
+    <a-marker preset="custom" type="pattern" url="./data/letterB.patt" id="markerVideo_VBo">
+      <a-video src="#video_VBo" position="0 1 -3" rotation="0 0 0" width="8" height="4.5" id="video1">
       </a-video>
-      <a-entity position="-1 0 1" rotation="0 0 0" scale="0.05 0.05 0.05" gltf-model="./assets/Modelos/Bongo/Bongo.gltf"></a-entity>
+      <a-entity position="0 0 0" rotation="0 90 0" scale="0.05 0.05 0.05" gltf-model="./assets/Modelos/Bongo/Bongo.gltf"></a-entity>
     </a-marker>
     </a-marker>
 
     <!-- Marker para letterC.patt -->
-    <a-marker preset="custom" type="pattern" url="./data/letterC.patt" id="markerVideo_CB">
-      <a-video src="#video_CB" position="0 0 0" rotation="-90 0 0" width="4" height="2.25" id="video1">
+    <a-marker preset="custom" type="pattern" url="./data/letterC.patt" id="markervideo_VBi">
+      <a-video src="#video_VBi" position="0 1 -3" rotation="0 0 0" width="8" height="4.5" id="video1">
 
       </a-video>
     </a-marker>
     
         <!-- Marker para letterF.patt -->
-        <a-marker preset="custom" type="pattern" url="./data/letterF.patt" id="markerVideo_CB">
-          <a-video src="#video_VB" position="0 0 0" rotation="-90 0 0" width="4" height="2.25" id="video1">
+        <a-marker preset="custom" type="pattern" url="./data/letterF.patt" id="markerVideo_DBi">
+          <a-video src="#video_DBi" position="0 0 0" rotation="-90 0 0" width="4" height="2.25" id="video1">
     
           </a-video>
         </a-marker>
@@ -75,11 +75,11 @@
   </div>
 
    <!-- Video cargado que usaremos en AR -->
-   <video class="VideosAR" id="video_DB" src="./assets/video/DocBinacional.webm" preload="auto" loop></video>
+   <video class="VideosAR" id="video_VBo" src="./assets/video/CapBongo.webm" preload="auto" loop></video>
    <!-- Video cargado que usaremos en AR -->
-   <video class="VideosAR" id="video_CB" src="./assets/video/CapBongo.webm" preload="auto" loop></video>
+   <video class="VideosAR" id="video_VBi" src="./assets/video/VideoBinacional.webm" preload="auto" loop></video>
     <!-- Video cargado que usaremos en AR -->
-   <video class="VideosAR" id="video_VB" src="./assets/video/VideoBinacional.webm" preload="auto" loop></video>
+   <video class="VideosAR" id="video_DBi" src="./assets/video/DocBinacional.webm" preload="auto" loop></video>
    
 
 
