--- a/Experiencia-AR.html
+++ b/Experiencia-AR.html
@@ -166,12 +166,9 @@
     <div class="Aboutcontent">
       <!-- Sección izquierda -->
       <div class="Aboutleft-section" data-aos="fade-right" data-aos-duration="1000">
-        <h3>CORRIENTES DE MEMORIA</h3>
-        <p>El proyecto de contexto “Corrientes de memoria: narrativa transmedia del Amazonas”, es un trabajo
-          investigativo con alto rigor académico realizado entre la Armada de Colombia y la Universidad San
-          Buenaventura, el cual tiene como propósito dar a conocer la labor de los Marinos de Colombia que se encuentran
-          desplegados en las áreas de responsabilidad de la Fuerza Naval de la Amazonía.</p>
-        <button class="btn-secondary" id="AboutleerMasBtn">Leer más</button>
+        <h3>Vive la Experiencia AR del Barco Bongo</h3>
+        <p>Descubre una experiencia inmersiva en Realidad Aumentada donde podrás explorar el emblemático barco Bongo en un modelo 3D interactivo, acompañado de videos, imágenes y contenido informativo accesible mediante tags o marcadores. Desde tu dispositivo móvil o tablet, sin necesidad de instalar aplicaciones, podrás escanear los tags para visualizar el barco desde todos los ángulos, conocer su historia a través de material audiovisual exclusivo y sumergirte en una propuesta innovadora que une tecnología y patrimonio cultural.</p>
+        <button class="btn-secondary" onclick="window.location.href='./AR-Armada/index.html'" >Vive esta aventura</button>
       </div>
 
       <!-- Sección derecha -->
@@ -181,25 +178,7 @@
     </div>
   </section>
 
-  <!-- Popup -->
-  <div id="Aboutpopup" class="Aboutpopup">
-    <div class="Aboutpopup-content">
-      <span id="AboutclosePopup" class="Aboutclose">&times;</span>
-      <img src="./Assets/IMG/About/5-min.webp" alt="Imagen del contexto" class="popupimg" />
-      <div class="AboutPopUPConte">
-        <h3 class="center-text">CORRIENTES DE MEMORIA</h3>
-        <p>El proyecto de contexto “Corrientes de memoria: narrativa transmedia del Amazonas”, es un trabajo
-          investigativo con alto rigor académico realizado entre la Armada de Colombia y la Universidad San
-          Buenaventura, el cual tiene como propósito dar a conocer la labor de los Marinos de Colombia que se encuentran
-          desplegados en las áreas de responsabilidad de la Fuerza Naval de la Amazonía, así como, visibilizar los
-          hechos históricos que han perdurado en el tiempo y han marcado la memoria del país, toda vez que, se narran
-          sucesos y acontecimientos desde la perspectiva de las comunidades autóctonas de los departamentos de Putumayo,
-          Caquetá, Guaviare, Vaupés y Amazonas, y del personal militar que cumple con la misión de proteger las bonanzas
-          y las costumbres intrínsecas de esta región de Colombia.
-        </p>
-      </div>
-    </div>
-  </div>
+
 
   <!-- Footer -->
   <footer>
@@ -298,7 +277,6 @@
 
 
   <script src="./JS/idioma.js"></script>
-  <script src="./JS/Viedo-PopUp.js"></script>
   <script src="./JS/Menutoggle.js"></script>
   <script src="./JS/paralax.js"></script>
   <script src="./JS/contexto.js"></script>
