--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
   </div>
 
   <div class="Productos" data-aos="fade-up">
-    <div class="card" data-apk="vr.apk" style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
+    <div class="card" onclick="window.location.href='Experiencia-AR.html'"  style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
       <div class="text-container">
         <h6 class="title">REALIDAD VIRTUAL ARC “TECIM REYES HOLGUÍN” </h6>
         <p class="experienciasdescription">Vive una inmersión total en la Patrullera de Apoyo Fluvial “TECIM Eddic
