--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
   </div>
 
   <div class="Productos" data-aos="fade-up">
-    <div class="card" onclick="window.location.href='Experiencia-AR.html'"  style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
+    <div class="card"  style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
       <div class="text-container">
         <h6 class="title">REALIDAD VIRTUAL ARC “TECIM REYES HOLGUÍN” </h6>
         <p class="experienciasdescription">Vive una inmersión total en la Patrullera de Apoyo Fluvial “TECIM Eddic
           Cristian Reyes Holguín” de la Armada de Colombia con esta experiencia de realidad virtual.</p>
       </div>
     </div>
-    <div class="card" data-apk="juego.apk" style="background-image: url('Assets/IMG/experiencias/juego1.webp');">
+    <div class="card" onclick="window.location.href='Experiencia-Game.html'" style="background-image: url('Assets/IMG/experiencias/juego1.webp');">
       <div class="text-container">
         <h6 class="title">RESCATA EL AMAZONAS</h6>
         <p class="experienciasdescription">Navega por misiones estratégicas para proteger el territorio marítimo y
@@ -408,7 +408,7 @@
           esfuerzo armado y no armado de la Armada de Colombia.</p>
       </div>
     </div>
-    <div class="card" data-apk="ar.apk" style="background-image: url('Assets/IMG/experiencias/ar2.webp');">
+    <div class="card"  onclick="window.location.href='Experiencia-AR.html'" style="background-image: url('Assets/IMG/experiencias/ar2.webp');">
       <div class="text-container">
         <h6 class="title">REALIDAD AUMENTADA BONGO HOSPITAL</h6>
         <p class="experienciasdescription">Sumérgete en una experiencia interactiva que te llevará a conocer más sobre
