Bloquear popup scroll

--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
 
   <script src="./JS/idioma.js"></script>
   <script src="./JS/Viedo-PopUp.js"></script>
+  <script src="./JS/scroll.js"></script>
   <script src="./JS/Menutoggle.js"></script>
   <script src="./JS/paralax.js"></script>
   <script src="./JS/contexto.js"></script>
