--- a/AR-Armada/Index.html
+++ b/AR-Armada/Index.html
@@ -40,23 +40,17 @@
 
 
     </a-marker>
-    </a-marker>
 
     <!-- Marker para letterC.patt -->
     <a-marker preset="custom" type="pattern" url="./data/letterC.patt" id="markervideo_VBi">
-      <a-video src="#video_VBi" position="0 1 -3" rotation="0 0 0" width="8" height="4.5" id="video1">
+      <a-video src="#video_VBi" position="0 2 -3" rotation="0 0 0" width="8" height="4.5" id="video1">
       </a-video>
-        <!-- Outliner (modelo invertido con escala un poco mayor y color sólido) -->
+      <!-- Outliner (modelo invertido con escala un poco mayor y color sólido) -->
 
 
-<!-- Modelo original -->
-<a-entity 
-  position="0 0 0" 
-  rotation="0 0 0" 
-  scale="0.05 0.05 0.05"
-  gltf-model="./assets/Modelos/GraficosBinacional/GraficosBinacional.gltf"
-  class="main-model"
-></a-entity>
+      <!-- Modelo original -->
+      <a-entity position="0 0 0" rotation="0 0 0" scale="0.05 0.05 0.05"
+        gltf-model="./assets/Modelos/GraficosBinacional/GraficosBinacional.gltf" class="main-model"></a-entity>
     </a-marker>
 
     <!-- Marker para letterF.patt -->
@@ -103,8 +97,8 @@
       de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la
       imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos
       especimen. </p>
-      <button onclick="window.location.href='../Index.html'">Web</button>
-      <button onclick="closePopup()">Cerrar</button>
+    <button onclick="window.location.href='../Index.html'">Web</button>
+    <button onclick="closePopup()">Cerrar</button>
   </div>
 
   <!-- Video cargado que usaremos en AR -->
