--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div class="Aboutpopup-content">
       <div id="historyclosePopup" class="Aboutclose">&times;</div>
       <img src="./Assets/IMG/Hitoria/historias/IMG/his-1.webp" alt="Imagen del contexto" class="popupimg" id="asd" />
-      <p id="HistoryDerechos">Derechos</p>
+      <p class="HistoryDerechos" id="HistoryDerechos">Derechos</p>
       <div class="AboutPopUPConte">
         <h3 class="center-text" id="TituloPopAmazonas">Contexto</h3>
         <p id="TextPopAmazonas">El proyecto de contexto “Corrientes de memoria: narrativa transmedia del Amazonas”, es
