--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <button class="btn-secondary" id="HisCaqBtnAmazonas">Leer más</button>
       </div>
       <div class="content-image-histoy">
-        <img src="./Assets/IMG/About/depa/VAÚPES-min.webp" alt="Imagen de ejemplo">
+        <img src="./Assets/IMG/About/depa/VAÚPES.png" alt="Imagen de ejemplo">
       </div>
     </div>
   </div>
