--- a/Experiencia-Game.html
+++ b/Experiencia-Game.html
@@ -118,29 +118,20 @@
   </header>
 
 
-  <!-- Banner -->
-  <div class="banner" id="banner">
-    <video autoplay muted loop class="banner-video">
-      <source src="./Assets/Videos/Banner/Banner.webm" type="video/mp4">
-      Tu navegador no soporta el video.
-    </video>
-    <div class="banner-content">
-      <!-----
-      <h1>
-        <span class="color1">CORRIENTES DE MEMORIA</span>
-        <span class="color2">Narrativa transmedia</span>
-        <span class="color1">de la Amazonía</span>
-      </h1>----->
-      <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>-->
-      <div class="buttons">
-        <button class="btn-primary" onclick="location.href='#exp'">Experiencias</button>
-        <button class="btn-transparent" onclick="location.href='#teaser'"><i class="fa fa-play"></i> Trailers</button>
+    <!-- Banner -->
+    <div class="banner" id="banner">
+      <video autoplay muted loop class="banner-video">
+        <source src="./Assets/Videos/Banner/Banner.webm" type="video/mp4">
+        Tu navegador no soporta el video.
+      </video>
+      <div class="banner-info">
+        <img class="banner-logo" src="./Assets/IMG/Logos/comprimido/sobre oscuros sin fondo-min.png" alt="Logo Corrientes de memoria"
+          srcset="">
+        <div class="banner-content">
+        </div>
       </div>
-
     </div>
-  </div>
-
+  
 
   <!-- separator -->
   <div class="separator">
