--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
   <div class="Productos" data-aos="fade-up">
     <div class="card" onclick="window.location.href='Experiencia-VR.html'"
-    style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
+    style="background-image: url('./Assets/IMG/experiencias/vr2.webp');">
       <div class="text-container">
         <h6 class="title">REALIDAD VIRTUAL ARC “TECIM REYES HOLGUÍN” </h6>
         <p class="experienciasdescription">Vive una inmersión total en la Patrullera de Apoyo Fluvial “TECIM Eddic
@@ -421,7 +421,7 @@
       </div>
     </div>
     <div class="card" onclick="window.location.href='Experiencia-Game.html'"
-      style="background-image: url('Assets/IMG/experiencias/juego1.webp');">
+      style="background-image: url('./Assets/IMG/experiencias/juego1.webp');">
       <div class="text-container">
         <h6 class="title">RESCATA EL AMAZONAS</h6>
         <p class="experienciasdescription">Navega por misiones estratégicas para proteger el territorio marítimo y
@@ -430,7 +430,7 @@
       </div>
     </div>
     <div class="card" onclick="window.location.href='Experiencia-AR.html'"
-      style="background-image: url('Assets/IMG/experiencias/ar2.webp');">
+      style="background-image: url('./Assets/IMG/experiencias/ar2.webp');">
       <div class="text-container">
         <h6 class="title">REALIDAD AUMENTADA BONGO HOSPITAL</h6>
         <p class="experienciasdescription">Sumérgete en una experiencia interactiva que te llevará a conocer más sobre
@@ -439,7 +439,7 @@
       </div>
     </div>
     <div class="card" onclick="window.location.href='Experiencias-Documental.html'"
-      style="background-image: url('Assets/IMG/experiencias/documental.webp');">
+      style="background-image: url('./Assets/IMG/experiencias/documental.webp');">
       <div class="text-container">
         <h6 class="title">DOCUMENTAL</h6>
         <p class="experienciasdescription">Se estructuraron 12 documentales de contexto y memoria histórica de la
@@ -448,7 +448,7 @@
       </div>
     </div>
     <div class="card" onclick="window.location.href='Experiencia-Libro.html'"
-    style="background-image: url('Assets/IMG/experiencias/libro.webp');">
+    style="background-image: url('./Assets/IMG/experiencias/libro.webp');">
       <div class="text-container">
         <h6 class="title">LIBRO</h6>
         <p class="experienciasdescription">Conoce este importante trabajo de investigación que evoca historias y
