--- a/AR-Armada/Index.html
+++ b/AR-Armada/Index.html
@@ -55,8 +55,7 @@
 
     <!-- Marker para letterF.patt -->
     <a-marker preset="custom" type="pattern" url="./data/letterF.patt" id="markerVideo_DBi">
-      <a-video src="#video_DBi" position="0 0 0" rotation="-90 0 0" width="4" height="2.25" id="video1">
-
+      <a-video src="#video_DBi" position="0 2 -3" rotation="0 0 0" width="8" height="4.5" id="video1">
       </a-video>
     </a-marker>
 
@@ -102,11 +101,11 @@
   </div>
 
   <!-- Video cargado que usaremos en AR -->
-  <video class="VideosAR" id="video_VBo" src="./assets/video/CapBongo.webm" preload="auto" loop></video>
-  <!-- Video cargado que usaremos en AR -->
   <video class="VideosAR" id="video_VBi" src="./assets/video/VideoBinacional.webm" preload="auto" loop></video>
   <!-- Video cargado que usaremos en AR -->
   <video class="VideosAR" id="video_DBi" src="./assets/video/DocBinacional.webm" preload="auto" loop></video>
+  <!-- Video cargado que usaremos en AR -->
+  <video class="VideosAR" id="video_VBo" src="./assets/video/AR_Bongo.webm" preload="auto" loop></video>
 
 
 
