--- a/AR-Armada/Index.html
+++ b/AR-Armada/Index.html
@@ -22,8 +22,16 @@
 
 <body style="margin: 0; overflow: hidden;">
 
-  <a-scene embedded="" arjs="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled: false"
+
+ 
+
+  
+  <a-scene embedded arjs="" inspector="" keyboard-shortcuts="" screenshot=""  vr-mode-ui="enabled: false"
     device-orientation-permission-ui="">
+
+     <!-- Cámara sin controles -->
+  <a-entity camera position="0 0 0" look-controls-enabled="false" wasd-controls-enabled="false"></a-entity>
+
 
     <!-- Marker para letterA.patt redirije a web-->
     <a-marker preset="custom" type="pattern" url="./data/letterA.patt" id="markerPopUp_Web">
@@ -98,14 +106,28 @@
       especimen. </p>
     <button onclick="window.location.href='../Index.html'">Web</button>
     <button onclick="closePopup()">Cerrar</button>
-  </div>
+  </div>  
 
-  <!-- Video cargado que usaremos en AR -->
-  <video class="VideosAR" id="video_VBi" src="./assets/video/VideoBinacional.webm" preload="auto" loop></video>
-  <!-- Video cargado que usaremos en AR -->
-  <video class="VideosAR" id="video_DBi" src="./assets/video/DocBinacional.webm" preload="auto" loop></video>
-  <!-- Video cargado que usaremos en AR -->
-  <video class="VideosAR" id="video_VBo" src="./assets/video/AR_Bongo.webm" preload="auto" loop></video>
+<!-- Video cargado que usaremos en AR -->
+<video class="VideosAR" id="video_VBi" preload="auto" loop>
+  <source src="./assets/video/VideoBinacional.webm" type="video/webm">
+  <source src="./assets/video/VideoBinacional.mp4" type="video/mp4">
+  Tu navegador no soporta videos HTML5.
+</video>
+
+<!-- Video cargado que usaremos en AR -->
+<video class="VideosAR" id="video_DBi" preload="auto" loop>
+  <source src="./assets/video/DocBinacional.webm" type="video/webm">
+  <source src="./assets/video/DocBinacional.mp4" type="video/mp4">
+  Tu navegador no soporta videos HTML5.
+</video>
+
+<!-- Video cargado que usaremos en AR -->
+<video class="VideosAR" id="video_VBo" preload="auto" loop>
+  <source src="./assets/video/AR_Bongo.webm" type="video/webm">
+  <source src="./assets/video/AR_Bongo.mp4" type="video/mp4">
+  Tu navegador no soporta videos HTML5.
+</video>
 
 
 
